c4prj2_input/grade.txt
Grading at Wed Jan 27 15:37:09 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:22:21: error: implicit declaration of function ‘hand_from_string’ [-Werror=implicit-function-declaration]
     deck_t * temp = hand_from_string(line,fc);
                     ^
input.c:22:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
